--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -4,62 +4,6 @@
 
 PLEX - лучшая CRM для автобизнеса.
 
-## Play online
-
-You can start playing with Docus in your browser using Stackblitz:
-
-
-## Create a new project
-
-1. Start a fresh Docus project with:
-
-[//]: # (```bash [npx])
-[//]: # (npx nuxi@latest init docs -t themes/docus)
-[//]: # (```)
-
-2. Install the dependencies in the `docs` folder:
-
-::code-group
-
-[//]: # (  yarn install)
-
-[//]: # (  ```)
-
-[//]: # ()
-[//]: # (  ```bash [pnpm])
-
+::ImageContainer
+123
 ::
-
-3. Run the `dev` command to start Docus in development mode:
-
-[//]: # (::code-group)
-
-[//]: # ()
-[//]: # (```bash [npm])
-
-[//]: # (npm run dev)
-
-[//]: # (```)
-
-[//]: # ()
-[//]: # (```bash [yarn])
-
-[//]: # (yarn dev)
-
-[//]: # (```)
-
-[//]: # ()
-[//]: # (```bash [pnpm])
-
-[//]: # (pnpm run dev)
-
-[//]: # (```)
-
-[//]: # ()
-[//]: # (::)
-
-[//]: # (::alert{type="success"})
-
-[//]: # (✨ Well done! A browser window should automatically open for <http://localhost:3000>)
-
-[//]: # (::)
