--- a/content/1.introduction/2.project-structure.md
+++ b/content/1.introduction/2.project-structure.md
@@ -1,3 +1,7 @@
+---
+title: 'Я дэб'
+---
+
 # Project Structure
 
 Docus is a Nuxt theme that provides a ready-to-use documentation website, if you are familiar with Nuxt, you will feel right at home.
