Try component props

--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,12 +1,18 @@
 ---
+rand: 123
 ---
 
 ![my image](/img/plex.avif)
 
-# Plex-CRM
+# Plex-CRM {{$doc.rand}}
 
 PLEX - лучшая CRM для автобизнеса.
 
 ::ImageContainer
-123
+---
+imgUrl: '123'
+---
+#description
+A [rich text](/) will be **rendered** by the component.
 ::
+
