--- a/content/2.main-page.md
+++ b/content/2.main-page.md
@@ -10,5 +10,11 @@ title: Главная страница
 
 Каждый пользователь, у которого есть доступ к отчетам, может группировать и выводить на главную страницу свои отчеты в виджет.
 
-![my image](/img/mainCrmPage.webp)
+::ImageContainer
+---
+imgUrl: '/img/mainCrmPage.webp'
+---
+#description
+A [rich text](/) will be **rendered** by the component.
+::
 
